# asso-django

./: .env.default  .gitignore  README.md  makefile  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  tailwind.config.js
.data/: NOTE.md
academy/: admin.py  models.py
academy/migrations/: 0001_initial.py  0002_alter_trainer_options_remove_trainer_description_and_more.py  0003_alter_session_options_remove_session_description_and_more.py  0004_enrollment_transaction.py  0007_alter_event_subtitle.py  0009_alter_event_subtitle.py
accountant/: admin.py  models.py
accountant/migrations/: 0001_initial.py
admin/: settings.py  urls.py
admin/data/: loaders.py
asso/: asgi.py  settings.py  urls.py
asso/academy/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
asso/accountant/: admin.py  apps.py  models.py
asso/accounts/: admin.py  apps.py  forms.py  models.py
asso/address/: admin.py  apps.py  models.py
asso/admin/: settings.py  wsgi.py
asso/asso/: settings.py  urls.py
asso/common/: apps.py  models.py
asso/commons/: admin.py  fields.py  models.py  utils.py
asso/core/: admin.py  apps.py  forms.py  models.py  utils.py
asso/landing/: apps.py  views.py
asso/member/: admin.py  apps.py  models.py  urls.py  views.py
asso/membership/: admin.py  apps.py  constants.py  models.py  urls.py  views.py
asso/scripts/: load_backup.py  load_theme.py
asso/static/: main.css  main.tw.css
asso/templates/: _base.html  _footer.html  _header.html  _scripts.html  base.html  create.html  home.html
asso/theme/: admin.py  apps.py  context_processors.py  models.py
common/: admin.py  data.py  fields.py  managers.py  models.py  util.py  utils.py
doc/: README.md  asso-er.drawio
docs/: asso-er.drawio
membership/: admin.py  loaders.py  managers.py  models.py  views.py
scripts/: default_theme.json  generate_secret_key.py  load_backup.py  load_data.py  load_theme.py
tailwind/: main.tw.css
tests/: conftest.py  test_accounts.py  test_member.py  test_membership.py
website/: admin.py  models.py  views.py
(+118 files in other folders)
