[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.packages.find]
include = ["asso"]

[project]
name = "asso-django"
version = "0.0.2"
requires-python = ">=3.10"
dependencies = [
    "django~=4.2",
    "django-extensions",
    "django-jazzmin",
    "django-money",
    "django-relativedelta",
    "loguru",
    "Pillow",
    "python-dateutil",
    "python-decouple",
    "tqdm",
]

[project.optional-dependencies]
dev = ["black", "isort", "ipython"]
test = ["pytest"]

[tool.isort]
profile = "black"
