[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.packages.find]
include = ["asso"]

[project]
name = "asso-django"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "django~=4.2",
    "django-extensions",
    "django-jazzmin",
    "django-money",
    "django-relativedelta",
    "loguru",
    "Pillow",
    "PyYAML",
    "python-codicefiscale",
    "python-dateutil",
    "python-decouple",
    "tqdm",
]

[project.optional-dependencies]
dev = ["black", "isort"]
test = ["pytest", "pytest-django"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "asso.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    "ignore::django.utils.deprecation.RemovedInDjango51Warning",
    "ignore::DeprecationWarning",
]